--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,11 @@
 AllCops:
   Exclude:
-    - '**/*.gemspec'
+    - "**/*.gemspec"
 
 GlobalVars:
   AllowedVariables:
     - $TRZR_PROCESS_MODE
     - $TRZR_LOG
+
+Layout/EndOfLine:
+  EnforcedStyle: lf
